k8s/mailpit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  labels:
    app: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.31.0
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          readinessProbe:
            tcpSocket:
              port: 8025
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8025
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
              ephemeral-storage: 64Mi
            limits:
              memory: 64Mi
              ephemeral-storage: 128Mi
